# jpeg-meta

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
